--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5StrummingGuitars.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5StrummingGuitars.html
@@ -25,54 +25,53 @@
             <h2>Strumming Guitars: Chords 1 and 5</h2>
         </section>
 
-
         <div class="lesson-block">
             <p>key of A</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of A).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of A).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Ab</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of Ab).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of Ab).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of B</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of B).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of B).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Bb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of Bb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of Bb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of C</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of C).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of C).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of D</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of D).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of D).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Db</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of Db).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of Db).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of E</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of E).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of E).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Eb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of Eb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of Eb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of F</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of F).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of F).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of G</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of G).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of G).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Gb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson5/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of Gb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/audio/Chords 1 and 5 - Strumming Guitars/Chords 1 and 5 - Strumming Guitars (key of Gb).mp3"></audio>
         </div>
 
 
